Fixed overflow in user title badges

--- a/wcfsetup/install/files/style/ui/userProfile.scss
+++ b/wcfsetup/install/files/style/ui/userProfile.scss
@@ -91,6 +91,12 @@
 	}
 }
 
+.userTitleBadge {
+	max-width: 154px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .userAvatarImage {
 	background-color: #fff;
 	border-radius: 50%;
